@@ -43,6 +43,8 @@ Changes
 * Modified zmsg_pushstr and zmsg_addstr to accept variable argument list
   and do vsnprintf formatting of provided string.
 
+* Added zhash_rename() function to allow soft renaming of item keys.
+
 
 czmq version 1.0.0 (stable), released on 2011/04/26
 ===================================================
